--- a/scripts/resources/Windows/Hbmame/hbmame.rc
+++ b/scripts/resources/Windows/Hbmame/hbmame.rc
@@ -1,6 +1,5 @@
 // license:BSD-3-Clause
-// copyright-holders:Gaston90
-// copyright-holders:Robbbert
+// copyright-holders:Gaston90 And Robbbert
 //============================================================
 //
 //	mame.rc - Minimal resource file for Win32 MAME
