--- a/src/osd/winui/mameui.rc
+++ b/src/osd/winui/mameui.rc
@@ -536,6 +536,7 @@ BEGIN
     CONTROL         "Sync to monitor refresh",IDC_SYNCREFRESH,WC_BUTTON,BS_AUTOCHECKBOX | WS_TABSTOP,10,52,93,10,0
     CONTROL         "Wait for vertical sync",IDC_WAITVSYNC,WC_BUTTON,BS_AUTOCHECKBOX | WS_TABSTOP,10,64,93,10,0
     CONTROL         "Refresh speed",IDC_REFRESHSPEED,WC_BUTTON,BS_AUTOCHECKBOX | WS_TABSTOP,10,76,93,10,0
+	CONTROL         "60FPS fixed",IDC_60FPS,WC_BUTTON,BS_AUTOCHECKBOX | WS_TABSTOP,10,136,93,12,0
     CONTROL         "Enable HLSL",IDC_HLSL_ON,WC_BUTTON,BS_AUTOCHECKBOX | WS_TABSTOP,10,88,93,10,0
     GROUPBOX        "Frame skipping",IDC_STATIC,4,100,102,44
     CONTROL         "Automatic",IDC_AUTOFRAMESKIP,WC_BUTTON,BS_AUTOCHECKBOX | WS_TABSTOP,10,112,77,10,0
