--- a/src/osd/winui/mameui.rc
+++ b/src/osd/winui/mameui.rc
@@ -368,7 +368,8 @@ BEGIN
     CTEXT           "MAMEUI version by Christopher Kirmse and The MAMEUI Team",IDC_TEXT2,6,118,310,10
     CTEXT           "Additional MAMEUI code by Mike Haaland, Andrew Kirmse,",IDC_TEXT3,6,130,310,10
     CTEXT           "Jeff Miller, John Hardy IV and Michael Soderstrom",IDC_TEXT4,6,142,310,10
-    CTEXT           "Additional MAMEUIFX code and features by Mamesick",IDC_SICKFX,6,154,310,10
+    CTEXT           "Additional MAMEUIFX code and features by Mamesick",IDC_TEXT4,6,154,310,10
+    CTEXT           "Additional EKMAME code and features by Kaze",IDC_SICKFX,6,154,310,10
     DEFPUSHBUTTON   "OK",IDOK,136,166,50,14
 END
 
@@ -545,7 +546,7 @@ BEGIN
 
     GROUPBOX        "",IDC_STATIC,325,106,70,28
     CONTROL         "Aspect ratio",IDC_ASPECT,WC_BUTTON,BS_AUTOCHECKBOX | WS_TABSTOP,325,106,70,10,0
-    LTEXT           "Ratio",IDC_ASPECTRATIOTEXT,328,116,30,11,SS_CENTERIMAGE | NOT WS_GROUP
+    LTEXT           "Size",IDC_ASPECTRATIOTEXT,328,116,30,11,SS_CENTERIMAGE | NOT WS_GROUP
     EDITTEXT        IDC_ASPECTRATION,360,115,14,12,ES_RIGHT | ES_AUTOHSCROLL | ES_NUMBER,0
     LTEXT           ":",IDC_ASPECTRATIOP,375,116,8,10,SS_CENTERIMAGE | NOT WS_GROUP
     EDITTEXT        IDC_ASPECTRATIOD,380,115,14,12,ES_RIGHT | ES_AUTOHSCROLL | ES_NUMBER,0
