--- a/src/osd/winui/mameui.rc
+++ b/src/osd/winui/mameui.rc
@@ -369,7 +369,7 @@ BEGIN
     RTEXT            "",IDC_BUILD,6,4,308,10
     LTEXT            "",IDC_BUILDVER,6,4,120,10
     CONTROL         "",IDC_ABOUT,WC_STATIC,SS_BITMAP,6,16,56,17
-    CTEXT           "PSARCADE FOREVER Copyright (C) 2016-2024 Gaston90",IDC_TEXT1,6,106,310,10
+    CTEXT           "PSARCADE FOREVER Copyright (C) 2016-2025 Gaston90",IDC_TEXT1,6,106,310,10
     CTEXT           "MAMEUI version by Christopher Kirmse and The MAMEUI Team",IDC_TEXT2,6,118,310,10
     CTEXT           "Additional MAMEUI code by Mike Haaland, Andrew Kirmse,",IDC_TEXT3,6,130,310,10
     CTEXT           "Jeff Miller, John Hardy IV and Michael Soderstrom",IDC_TEXT4,6,142,310,10
@@ -584,7 +584,7 @@ STYLE WS_CHILD | WS_DISABLED | WS_CAPTION | DS_SETFONT
 CAPTION "OpenGL/BGFX"
 FONT 8, "Tahoma"
 BEGIN
-    ICON            IDI_JOYSTICK,IDC_STATIC,10,12,32,32
+    ICON            IDI_OPENGL,IDC_STATIC,10,12,32,32
     LTEXT           WC_STATIC,IDC_PROP_TITLE,42,10,168,30,SS_NOPREFIX
     GROUPBOX        "Video mode",IDC_STATIC,4,40,102,28
     COMBOBOX        IDC_VIDEO_MODE,10,50,90,62,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP,0    
@@ -661,7 +661,7 @@ STYLE WS_CHILD | WS_DISABLED | WS_CAPTION | DS_SETFONT
 CAPTION "Sound/Vector"
 FONT 8, "Tahoma"
 BEGIN
-    ICON            IDI_ADVANCED,IDC_STATIC,10,12,32,32
+    ICON            IDI_VECTOR,IDC_STATIC,10,12,32,32
     LTEXT           WC_STATIC,IDC_PROP_TITLE,42,10,168,30,SS_NOPREFIX
     GROUPBOX        "Beam width minimum",IDC_BEAMTEXT,4,40,212,28
     CONTROL         "",IDC_BEAM_MIN,TRACKBAR_CLASS,TBS_AUTOTICKS | WS_TABSTOP,10,52,180,10,0
@@ -750,7 +750,7 @@ STYLE WS_CHILD | WS_DISABLED | WS_CAPTION | DS_SETFONT
 CAPTION "Miscellaneous"
 FONT 8, "Tahoma"
 BEGIN
-    ICON            IDI_SHADER,IDC_STATIC,10,12,32,32
+    ICON            IDI_MISC,IDC_STATIC,10,12,32,32
     LTEXT           WC_STATIC,IDC_PROP_TITLE,42,10,168,30,SS_NOPREFIX
     CONTROL         "Enable cheats",IDC_CHEAT,WC_BUTTON,BS_AUTOCHECKBOX | WS_TABSTOP,10,40,86,10,0
     CONTROL         "Enable internal debugger",IDC_DEBUG,WC_BUTTON,BS_AUTOCHECKBOX | WS_TABSTOP,10,52,96,10,0
